feat: added functional of toggle filter menu options

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="scroll-wrapper">
             <div class="types-filter filter-wrapper">
               <div class="filter-title">
-                <h4 class="option-visible-toggle">屬性篩選器</h4>
+                <button class="option-visible-toggle"><h4>屬性篩選器</h4></button>
                 <button>
                   <i class="fa-solid fa-eye"></i>
                 </button>
@@ -237,7 +237,7 @@
                   <i class="fa-solid fa-eraser"></i>
                 </button>
               </div>
-              <div class="filter-option-container option-visible">
+              <div class="filter-option-container option-invisible">
                 <div class="choose-type">
                   <label for="type-fire" class="toggle-button type-fire">
                     <input type="checkbox" id="type-fire" class="type-button" />
@@ -355,7 +355,7 @@
             </div>
             <div class="abilities-filter filter-wrapper">
               <div class="filter-title">
-                <h4 class="option-visible-toggle">特性篩選器</h4>
+                <button class="option-visible-toggle"><h4>特性篩選器</h4></button>
                 <button>
                   <i class="fa-solid fa-eye"></i>
                 </button>
@@ -363,7 +363,7 @@
                   <i class="fa-solid fa-eraser"></i>
                 </button>
               </div>
-              <div class="filter-option-container option-visible">
+              <div class="filter-option-container option-invisible">
                 <div class="all-abilities">
                   <label for="all-abilities" class="setting-option">
                     <input type="radio" name="abilities-filter" id="all-abilities" class="" checked />
@@ -431,7 +431,7 @@
             </div>
             <div class="stats-filter filter-wrapper">
               <div class="filter-title">
-                <h4 class="option-visible-toggle">種族值篩選器</h4>
+                <button class="option-visible-toggle"><h4>種族值篩選器</h4></button>
                 <button>
                   <i class="fa-solid fa-eye"></i>
                 </button>
@@ -439,7 +439,7 @@
                   <i class="fa-solid fa-eraser"></i>
                 </button>
               </div>
-              <div class="filter-option-container option-visible">
+              <div class="filter-option-container option-invisible">
                 <div class="option-title-group">
                   <p>種族值篩選</p>
                   <button class="button-md"><i class="fa-solid fa-plus"></i></button>
@@ -452,7 +452,7 @@
             </div>
             <div class="moves-filter filter-wrapper">
               <div class="filter-title">
-                <h4 class="option-visible-toggle">招式篩選器</h4>
+                <button class="option-visible-toggle"><h4>招式篩選器</h4></button>
                 <button>
                   <i class="fa-solid fa-eye"></i>
                 </button>
@@ -460,7 +460,7 @@
                   <i class="fa-solid fa-eraser"></i>
                 </button>
               </div>
-              <div class="filter-option-container option-visible">
+              <div class="filter-option-container option-invisible">
                 <div class="option-button-group">
                   <button class="button-md"><i class="fa-solid fa-filter"></i>&ensp;招式搜尋庫</button>
                   <button class="button-md"><i class="fa-solid fa-plus"></i>&ensp;輸入招式</button>
