refactor: refactored javascript code

--- a/index.html
+++ b/index.html
@@ -241,92 +241,92 @@
                 <div class="choose-type">
                   <label for="type-fire" class="toggle-button type-fire">
                     <input type="checkbox" id="type-fire" class="type-button" />
-                    <div class="type-sprites bg-type-fire"></div>
+                    <div class="type-icon icon-type-fire"></div>
                     <p>火</p>
                   </label>
                   <label for="type-fighting" class="toggle-button type-fighting">
                     <input type="checkbox" id="type-fighting" class="type-button" />
-                    <div class="type-sprites bg-type-fighting"></div>
+                    <div class="type-icon icon-type-fighting"></div>
                     <p>格鬥</p>
                   </label>
                   <label for="type-electric" class="toggle-button type-electric">
                     <input type="checkbox" id="type-electric" class="type-button" />
-                    <div class="type-sprites bg-type-electric"></div>
+                    <div class="type-icon icon-type-electric"></div>
                     <p>電</p>
                   </label>
                   <label for="type-bug" class="toggle-button type-bug">
                     <input type="checkbox" id="type-bug" class="type-button" />
-                    <div class="type-sprites bg-type-bug"></div>
+                    <div class="type-icon icon-type-bug"></div>
                     <p>蟲</p>
                   </label>
                   <label for="type-grass" class="toggle-button type-grass">
                     <input type="checkbox" id="type-grass" class="type-button" />
-                    <div class="type-sprites bg-type-grass"></div>
+                    <div class="type-icon icon-type-grass"></div>
                     <p>草</p>
                   </label>
                   <label for="type-flying" class="toggle-button type-flying">
                     <input type="checkbox" id="type-flying" class="type-button" />
-                    <div class="type-sprites bg-type-flying"></div>
+                    <div class="type-icon icon-type-flying"></div>
                     <p>飛行</p>
                   </label>
                   <label for="type-steel" class="toggle-button type-steel">
                     <input type="checkbox" id="type-steel" class="type-button" />
-                    <div class="type-sprites bg-type-steel"></div>
+                    <div class="type-icon icon-type-steel"></div>
                     <p>鋼</p>
                   </label>
                   <label for="type-ice" class="toggle-button type-ice">
                     <input type="checkbox" id="type-ice" class="type-button" />
-                    <div class="type-sprites bg-type-ice"></div>
+                    <div class="type-icon icon-type-ice"></div>
                     <p>冰</p>
                   </label>
                   <label for="type-water" class="toggle-button type-water">
                     <input type="checkbox" id="type-water" class="type-button" />
-                    <div class="type-sprites bg-type-water"></div>
+                    <div class="type-icon icon-type-water"></div>
                     <p>水</p>
                   </label>
                   <label for="type-dragon" class="toggle-button type-dragon">
                     <input type="checkbox" id="type-dragon" class="type-button" />
-                    <div class="type-sprites bg-type-dragon"></div>
+                    <div class="type-icon icon-type-dragon"></div>
                     <p>龍</p>
                   </label>
                   <label for="type-poison" class="toggle-button type-poison">
                     <input type="checkbox" id="type-poison" class="type-button" />
-                    <div class="type-sprites bg-type-poison"></div>
+                    <div class="type-icon icon-type-poison"></div>
                     <p>毒</p>
                   </label>
                   <label for="type-ghost" class="toggle-button type-ghost">
                     <input type="checkbox" id="type-ghost" class="type-button" />
-                    <div class="type-sprites bg-type-ghost"></div>
+                    <div class="type-icon icon-type-ghost"></div>
                     <p>幽靈</p>
                   </label>
                   <label for="type-psychic" class="toggle-button type-psychic">
                     <input type="checkbox" id="type-psychic" class="type-button" />
-                    <div class="type-sprites bg-type-psychic"></div>
+                    <div class="type-icon icon-type-psychic"></div>
                     <p>超能力</p>
                   </label>
                   <label for="type-fairy" class="toggle-button type-fairy">
                     <input type="checkbox" id="type-fairy" class="type-button" />
-                    <div class="type-sprites bg-type-fairy"></div>
+                    <div class="type-icon icon-type-fairy"></div>
                     <p>妖精</p>
                   </label>
                   <label for="type-ground" class="toggle-button type-ground">
                     <input type="checkbox" id="type-ground" class="type-button" />
-                    <div class="type-sprites bg-type-ground"></div>
+                    <div class="type-icon icon-type-ground"></div>
                     <p>地面</p>
                   </label>
                   <label for="type-dark" class="toggle-button type-dark">
                     <input type="checkbox" id="type-dark" class="type-button" />
-                    <div class="type-sprites bg-type-dark"></div>
+                    <div class="type-icon icon-type-dark"></div>
                     <p>惡</p>
                   </label>
                   <label for="type-rock" class="toggle-button type-rock">
                     <input type="checkbox" id="type-rock" class="type-button" />
-                    <div class="type-sprites bg-type-rock"></div>
+                    <div class="type-icon icon-type-rock"></div>
                     <p>岩石</p>
                   </label>
                   <label for="type-normal" class="toggle-button type-normal">
                     <input type="checkbox" id="type-normal" class="type-button" />
-                    <div class="type-sprites bg-type-normal"></div>
+                    <div class="type-icon icon-type-normal"></div>
                     <p>一般</p>
                   </label>
                   <button class="selected-cleared-all-toggle button-md">選取全部屬性</button>
